tests/UniBenchBack/benchmarks/timeff.txt
./run_all.sh: line 156: count: command not found
./run_all.sh: line 157: count: command not found
Running  : Polybench/2DCONV/src/2DConvolution.c

real	0m5.972s
user	0m6.204s
sys	0m0.132s

real	0m4.197s
user	0m4.092s
sys	0m0.104s
./run_all.sh: line 156: count: command not found
./run_all.sh: line 157: count: command not found
Running  : Polybench/2MM/src/2mm.c

real	1m3.060s
user	1m3.640s
sys	0m0.016s

real	0m42.868s
user	0m42.860s
sys	0m0.004s
./run_all.sh: line 156: count: command not found
./run_all.sh: line 157: count: command not found
Running  : Polybench/3DCONV/src/3DConvolution.c

real	0m18.079s
user	0m18.280s
sys	0m0.172s

real	0m13.045s
user	0m12.812s
sys	0m0.232s
./run_all.sh: line 156: count: command not found
./run_all.sh: line 157: count: command not found
Running  : Polybench/3MM/src/3mm.c

real	0m13.320s
user	0m13.760s
sys	0m0.000s

real	0m8.134s
user	0m8.128s
sys	0m0.004s
./run_all.sh: line 156: count: command not found
./run_all.sh: line 157: count: command not found
Running  : Polybench/ATAX/src/atax.c

real	0m4.161s
user	0m4.624s
sys	0m0.060s

real	0m2.645s
user	0m2.620s
sys	0m0.024s
./run_all.sh: line 156: count: command not found
./run_all.sh: line 157: count: command not found
Running  : Polybench/BICG/src/bicg.c

real	0m4.239s
user	0m4.876s
sys	0m0.052s

real	0m2.523s
user	0m2.508s
sys	0m0.012s
./run_all.sh: line 156: count: command not found
./run_all.sh: line 157: count: command not found
Running  : Polybench/CORR/src/correlation.c

real	0m11.851s
user	0m12.312s
sys	0m0.000s

real	0m9.409s
user	0m9.408s
sys	0m0.000s
./run_all.sh: line 156: count: command not found
./run_all.sh: line 157: count: command not found
Running  : Polybench/COVAR/src/covariance.c

real	2m15.431s
user	2m15.900s
sys	0m0.020s

real	1m34.160s
user	1m34.152s
sys	0m0.004s
./run_all.sh: line 156: count: command not found
./run_all.sh: line 157: count: command not found
Running  : Polybench/FDTD-2D/src/fdtd2d.c

real	3m5.290s
user	3m5.772s
sys	0m0.016s

real	1m52.397s
user	1m52.380s
sys	0m0.012s
./run_all.sh: line 156: count: command not found
./run_all.sh: line 157: count: command not found
Running  : Polybench/GEMM/src/gemm.c

real	0m4.883s
user	0m5.172s
sys	0m0.000s

real	0m2.718s
user	0m2.716s
sys	0m0.000s
./run_all.sh: line 156: count: command not found
./run_all.sh: line 157: count: command not found
Running  : Polybench/GESUMMV/src/gesummv.c
./run_all.sh: line 165: 49166 Segmentation fault      ./testP >> timef.txt

real	0m0.653s
user	0m0.696s
sys	0m0.028s
./run_all.sh: line 165: 49178 Segmentation fault      ./testS >> timef.txt

real	0m0.383s
user	0m0.348s
sys	0m0.032s
./run_all.sh: line 156: count: command not found
./run_all.sh: line 157: count: command not found
Running  : Polybench/GRAMSCHM/src/gramschmidt.c

real	0m4.599s
user	0m4.928s
sys	0m0.016s

real	0m3.093s
user	0m3.096s
sys	0m0.000s
./run_all.sh: line 156: count: command not found
./run_all.sh: line 157: count: command not found
Running  : Polybench/MVT/src/mvt.c

real	0m1.511s
user	0m1.816s
sys	0m0.012s

real	0m0.996s
user	0m0.984s
sys	0m0.008s
./run_all.sh: line 156: count: command not found
./run_all.sh: line 157: count: command not found
Running  : Polybench/SYR2K/src/syr2k.c

real	4m38.807s
user	4m39.272s
sys	0m0.020s

real	2m56.887s
user	2m56.864s
sys	0m0.016s
./run_all.sh: line 156: count: command not found
./run_all.sh: line 157: count: command not found
Running  : Polybench/SYRK/src/syrk.c
Polybench/SYRK/src/syrk_AI.c: In function 'syrkGPU':
Polybench/SYRK/src/syrk_AI.c:214:1: error: expected declaration or statement at end of input
 }
 ^
Polybench/SYRK/src/syrk_AI.c:214:1: error: expected declaration or statement at end of input
Polybench/SYRK/src/syrk_AI.c:214:1: error: expected declaration or statement at end of input
Polybench/SYRK/src/syrk_AI.c:214:1: error: expected declaration or statement at end of input
Polybench/SYRK/src/syrk_AI.c: In function 'syrkGPU':
Polybench/SYRK/src/syrk_AI.c:214:1: error: expected declaration or statement at end of input
 }
 ^
Polybench/SYRK/src/syrk_AI.c:214:1: error: expected declaration or statement at end of input
Polybench/SYRK/src/syrk_AI.c:214:1: error: expected declaration or statement at end of input
Polybench/SYRK/src/syrk_AI.c:214:1: error: expected declaration or statement at end of input
./run_all.sh: line 160: ./testP: No such file or directory

real	0m0.001s
user	0m0.000s
sys	0m0.000s
./run_all.sh: line 161: ./testS: No such file or directory

real	0m0.001s
user	0m0.000s
sys	0m0.000s
rm: cannot remove 'testP': No such file or directory
rm: cannot remove 'testS': No such file or directory
./run_all.sh: line 156: count: command not found
./run_all.sh: line 157: count: command not found
Running  : Polybench/SYRK_M/src/syrk_m.c

real	0m11.161s
user	0m11.160s
sys	0m0.000s

real	0m11.114s
user	0m11.112s
sys	0m0.000s
